--- a/expressServer/package.json
+++ b/expressServer/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "module-alias": "^2.2.2",
+    "shared": "file:../shared",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
