--- a/cryptoReactNativeApp/package.json
+++ b/cryptoReactNativeApp/package.json
@@ -9,9 +9,11 @@
     "logIos": "react-native log-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "link" : "react-native link @react-native-async-storage/async-storage"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
