--- a/cryptoReactNativeApp/ios/Podfile
+++ b/cryptoReactNativeApp/ios/Podfile
@@ -12,6 +12,8 @@ target 'cryptoReactNativeApp' do
     :hermes_enabled => false
   )
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
   target 'cryptoReactNativeAppTests' do
     inherit! :complete
     # Pods for testing
